# aiohttp-crm

./: README.md  pyproject.toml
app/crm/: routes.py  schemes.py  views.py
app/store/: __init__.py
app/store/crm/: accessor.py
app/web/: app.py  config.py  middlewares.py  schemes.py  utils.py
config/: config.yaml
