[tool.poetry]
name = "aiohttp-crm"
version = "0.1.0"
description = ""
authors = ["qqKazakov <leap74rus@gmail.com>"]
readme = "README.md"
packages = [{include = "aiohttp_crm"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
black = "^23.3.0"
flake8 = "^6.0.0"
aiohttp-apispec = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
